--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             <div class="list-container">
                 <ul class="listas">
-                    <li><a href="#http://127.0.0.1:5500/Inicio.htm" class="activo">Inicio</a></li>
+                    <li><a href="http://127.0.0.1:5500/index.html" class="activo">Inicio</a></li>
                     <li><a href="http://127.0.0.1:5500/Mate1.html">Matemáticas 1</a></li> 
                     <li><a href="http://127.0.0.1:5500/MateDis.html">Matemáticas Discretas</a></li>
                     <li><a href="http://127.0.0.1:5500/Algebra.html">Álgebra Lineal</a></li>
