--- a/Algebra.html
+++ b/Algebra.html
@@ -21,12 +21,12 @@
         
         <nav class="menu">  
             <div class="logo-box">
-                <a title="Inicio" href="http://127.0.0.1:5500/Inicio.html"><img src="/img/logo.png" alt=""></a>
+                <a title="Inicio" href="http://127.0.0.1:5500/index.html"><img src="/img/logo.png" alt=""></a>
                 <span class="btn-menu"><i class="fas fa-bars"></i></span>
             </div>
             <div class="list-container">
                 <ul class="listas">
-                    <li><a href="http://127.0.0.1:5500/Inicio.html">Inicio</a></li>
+                    <li><a href="http://127.0.0.1:5500/index.html">Inicio</a></li>
                     <li><a href="http://127.0.0.1:5500/Mate1.html">Matemáticas 1</a></li> 
                     <li><a href="http://127.0.0.1:5500/MateDis.html">Matemáticas Discretas</a></li>
                     <li><a href="http://127.0.0.1:5500/Algebra.html" class="activo">Álgebra Lineal</a></li>
