--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             </div>
             <div class="list-container">
                 <ul class="listas">
-                    <li><a href="http://127.0.0.1:5500/index.html" class="activo">Inicio</a></li>
-                    <li><a href="http://127.0.0.1:5500/Mate1.html">Matemáticas 1</a></li> 
-                    <li><a href="http://127.0.0.1:5500/MateDis.html">Matemáticas Discretas</a></li>
-                    <li><a href="http://127.0.0.1:5500/Algebra.html">Álgebra Lineal</a></li>
+                    <li><a href="index.html" class="activo">Inicio</a></li>
+                    <li><a href="Mate1.html">Matemáticas 1</a></li> 
+                    <li><a href="MateDis.html">Matemáticas Discretas</a></li>
+                    <li><a href="Algebra.html">Álgebra Lineal</a></li>
                     <li><a href="http://127.0.0.1:5500/Nosotros.html">Nosotros</a></li>
                 </ul>
             </div>
