--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <li><a href="Mate1.html">Matemáticas 1</a></li> 
                     <li><a href="MateDis.html">Matemáticas Discretas</a></li>
                     <li><a href="Algebra.html">Álgebra Lineal</a></li>
-                    <li><a href="http://127.0.0.1:5500/Nosotros.html">Nosotros</a></li>
+                    <li><a href="Nosotros.html">Nosotros</a></li>
                 </ul>
             </div>
 
