--- a/MateDis.html
+++ b/MateDis.html
@@ -22,16 +22,16 @@
         
         <nav class="menu">  
             <div class="logo-box">
-                <a title="Inicio" href="http://127.0.0.1:5500/index.html"><img src="/img/logo.png" alt=""></a>
+                <a title="Inicio" href="http://127.0.0.1:5500/index.html"><img src="img/logo.png" alt=""></a>
                 <span class="btn-menu"><i class="fas fa-bars"></i></span>
             </div>
             <div class="list-container">
                 <ul class="listas">
-                    <li><a href="http://127.0.0.1:5500/index.html">Inicio</a></li>
-                    <li><a href="http://127.0.0.1:5500/Mate1.html">Matemáticas 1</a></li> 
-                    <li><a href="http://127.0.0.1:5500/MateDis.html" class="activo">Matemáticas Discretas</a></li>
-                    <li><a href="http://127.0.0.1:5500/Algebra.html">Álgebra Lineal</a></li>
-                    <li><a href="http://127.0.0.1:5500/Nosotros.html">Nosotros</a></li>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="Mate1.html">Matemáticas 1</a></li> 
+                    <li><a href="MateDis.html" class="activo">Matemáticas Discretas</a></li>
+                    <li><a href="Algebra.html">Álgebra Lineal</a></li>
+                    <li><a href="Nosotros.html">Nosotros</a></li>
                 </ul>
             </div>
 
