--- a/Nosotros.html
+++ b/Nosotros.html
@@ -70,6 +70,14 @@
                     <p>Resido en Facatativá - Cundinamarca, tengo 19 años de edad, soy estudiante de Ingeniería de sistemas de primer semestre de la universidad de Cundinamarca además soy técnico bachiller electricista y cuento con técnico en mantenimiento de Computo.</p>  
                 </div>
             </div>
+            <div class="box-nosotros">
+            <div class="card-nosotros">
+                <div class="card-img"><img src="img/Alvaro.jpg" alt=""></div>
+                <div class="text-nosotros">
+                    <h4>Alvaro Gomez Barragán</h4>
+                    <p>Resido en Funza - Cundinamarca, tengo 19 Años, soy estudiante de Ingeniería de sistemas de primer semestre de la universidad de Cundinamarca además soy tecnologo en mantenimiento de equipos de computo, diseño y cableado estructurado, cuento con un curso corto de redes electricas domiciliarias y conocimiento en intalación de camaras de seguridad.</p>
+                </div>
+            </div>
         </div>
 
     </section>
