--- a/Nosotros.html
+++ b/Nosotros.html
@@ -75,7 +75,7 @@
                 <div class="card-img"><img src="img/Alvaro.jpg" alt=""></div>
                 <div class="text-nosotros">
                     <h4>Alvaro Gomez Barragán</h4>
-                    <p>Resido en Funza - Cundinamarca, tengo 19 Años, soy estudiante de Ingeniería de sistemas de primer semestre de la universidad de Cundinamarca además soy tecnologo en mantenimiento de equipos de computo, diseño y cableado estructurado, cuento con un curso corto de redes electricas domiciliarias y conocimiento en intalación de camaras de seguridad.</p>
+                    <p>Resido en Quebradanegra- Cundinamarca, tengo 18 años de edad, soy estudiante de Ingeniería de sistemas de primer semestre de la universidad de Cundinamarca y me desempeño como desarrollador web en una empresa llamada S2 Digital.</p>
                 </div>
             </div>
         </div>
