--- a/Nosotros.html
+++ b/Nosotros.html
@@ -70,14 +70,15 @@
                     <p>Resido en Facatativá - Cundinamarca, tengo 19 años de edad, soy estudiante de Ingeniería de sistemas de primer semestre de la universidad de Cundinamarca además soy técnico bachiller electricista y cuento con técnico en mantenimiento de Computo.</p>  
                 </div>
             </div>
-            <div class="box-nosotros">
-            <div class="card-nosotros">
+             <div class="card-nosotros">
                 <div class="card-img"><img src="img/Alvaro.jpg" alt=""></div>
                 <div class="text-nosotros">
                     <h4>Alvaro Gomez Barragán</h4>
-                    <p>Resido en Quebradanegra- Cundinamarca, tengo 18 años de edad, soy estudiante de Ingeniería de sistemas de primer semestre de la universidad de Cundinamarca y me desempeño como desarrollador web en una empresa llamada S2 Digital.</p>
+                    <p>Resido en Quebradanegra- Cundinamarca, tengo 18 años de edad, soy estudiante de Ingeniería de sistemas de primer semestre de la universidad de Cundinamarca y me desempeño como desarrollador web en una empresa llamada S2 Digital</p>  
                 </div>
             </div>
+            
+            
         </div>
 
     </section>
