--- a/Nosotros.html
+++ b/Nosotros.html
@@ -77,6 +77,16 @@
                     <p>Resido en Quebradanegra- Cundinamarca, tengo 18 años de edad, soy estudiante de Ingeniería de sistemas de primer semestre de la universidad de Cundinamarca y me desempeño como desarrollador web en una empresa llamada S2 Digital</p>  
                 </div>
             </div>
+            <div class="card-nosotros">
+                <div class="card-img"><img src="img/Mateo.jpg" alt=""></div>
+                <div class="text-nosotros">
+                    <h4>Alvaro Gomez Barragán</h4>
+                    <p>Edad: 19 años
+                       Vivo: Facatativá 
+                       Estudios: Técnico en Prgramacion y Desarrollo de Software.
+                       Curso primer semestre de Ingenieria en Sistemas en la Universidad de Cundinamarca.</p>  
+                </div>
+            </div>
             
             
         </div>
