--- a/Nosotros.html
+++ b/Nosotros.html
@@ -81,10 +81,7 @@
                 <div class="card-img"><img src="img/Mateo.jpg" alt=""></div>
                 <div class="text-nosotros">
                     <h4>Alvaro Gomez Barragán</h4>
-                    <p>Edad: 19 años
-                       Vivo: Facatativá 
-                       Estudios: Técnico en Prgramacion y Desarrollo de Software.
-                       Curso primer semestre de Ingenieria en Sistemas en la Universidad de Cundinamarca.</p>  
+                    <p>Resido en Facatativá, tengo 19 años, soy Técnico en Prgramacion y Desarrollo de Software y Curso primer semestre de Ingenieria en Sistemas en la Universidad de Cundinamarca.</p>  
                 </div>
             </div>
             
