--- a/Nosotros.html
+++ b/Nosotros.html
@@ -80,7 +80,7 @@
             <div class="card-nosotros">
                 <div class="card-img"><img src="img/Mateo.jpg" alt=""></div>
                 <div class="text-nosotros">
-                    <h4>Alvaro Gomez Barragán</h4>
+                    <h4>Matheo Velandia</h4>
                     <p>Resido en Facatativá, tengo 19 años, soy Técnico en Prgramacion y Desarrollo de Software y Curso primer semestre de Ingenieria en Sistemas en la Universidad de Cundinamarca.</p>  
                 </div>
             </div>
